# 3Dof_-TrajectoryPlanning

./: CMakeLists.txt  README.md  code_objectives.txt
include/: Robot.h  Vec3.h  functions.h  other_classes.h
src/: Robot.cpp  Vec3.cpp  functions.cpp  main.cpp  other_classes.cpp
tests/: test_functions.cpp  test_main.cpp  test_robot.cpp
